--- a/resources/css/typo/webfonts.css
+++ b/resources/css/typo/webfonts.css
@@ -3,3 +3,4 @@
  * -----------------------------------------------------------------------------
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;900&display=swap');
