--- a/resources/views/partials/menu/main.antlers.html
+++ b/resources/views/partials/menu/main.antlers.html
@@ -1,4 +1,4 @@
-<a 
+{{# <a 
   href="javascript:;" 
   title="Menu anzeigen / verbergen"
   class=""
@@ -14,4 +14,33 @@
       {{ /nav:collection:pages }}
     </ul>
   </nav>
-</div>
+</div> #}}
+
+<nav class="site-menu" data-menu>
+  <ul>
+    <li>
+      <a href="">Patienten</a>
+      <ul>
+        <li><a href="">Betreueung</a></li>
+        <li><a href="">Lorem</a></li>
+        <li><a href="">Ipsum</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="">Kontakt</a>
+      <ul>
+        <li><a href="">Dolor</a></li>
+        <li><a href="">Lorem</a></li>
+        <li><a href="">Ipsum</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="">Über uns</a>
+      <ul>
+        <li><a href="">Lorem</a></li>
+        <li><a href="">Dolor</a></li>
+        <li><a href="">Ipsum</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
