--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,8 +2,10 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 @import "typo/webfonts.css";
+@import "components/buttons/menu.css";
 @import "components/collapsible.css";
 @import "layout/base.css";
+@import "layout/header.css";
 @import "layout/menu.css";
 
 
