--- a/resources/css/layout/base.css
+++ b/resources/css/layout/base.css
@@ -8,7 +8,10 @@ html {
 }
 
 body {
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  @apply max-w-[1404px] w-full 2xl:mx-auto bg-green-100 2xl:bg-red-200 px-27 2xl:px-36;
 }
