--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,17 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
 @import "typo/webfonts.css";
+
 @import "components/buttons/menu.css";
 @import "components/collapsible.css";
+
 @import "layout/base.css";
 @import "layout/header.css";
+@import "layout/footer.css";
 @import "layout/menu.css";
+
+@import "helpers.css";
 
 
