--- a/resources/views/partials/layout/footer.antlers.html
+++ b/resources/views/partials/layout/footer.antlers.html
@@ -1,3 +1,70 @@
-<footer>
-
+<footer class="site-footer">
+  <div>
+    <div class="md:grid md:grid-cols-12 md:gap-24">
+      <div class="md:col-span-4">
+        <h3 class="font-black mb-32">Kontakt</h3>
+        <ul>
+          <li>
+            <a href="mailto:alphacare@hin.ch" title="Senden Sie uns eine E-Mail">
+              alphacare@hin.ch
+            </a>
+          </li>
+          <li>
+            <a href="tel:043 268 74 70" title="Rufen Sie uns an">
+              043 268 74 70
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="md:col-span-4">
+        <h3 class="font-black mb-32 mt-72 md:mt-0">Informieren</h3>
+        <ul>
+          <li class="flex">
+            {{ partial:icons/arrow-right class="mr-12 text-white" }}
+            <a href="/" title="Über uns" class="py-4">
+              Über uns
+            </a>
+          </li>
+          <li class="flex">
+            {{ partial:icons/arrow-right class="mr-12 text-white" }}
+            <a href="/" title="Patienten" class="py-4">
+              Patienten
+            </a>
+          </li>
+          <li class="flex">
+            {{ partial:icons/arrow-right class="mr-12 text-white" }}
+            <a href="/" title="Kliniken und Ärzte" class="py-4">
+              Kliniken und Ärzte
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="md:col-span-4">
+        <h3 class="font-black mb-32 mt-72 md:mt-0">Privatsphäre</h3>
+        <ul>
+          <li class="flex">
+            {{ partial:icons/arrow-right class="mr-12 text-white" }}
+            <a href="/" title="Impressum" class="py-4">
+              Impressum
+            </a>
+          </li>
+          <li class="flex">
+            {{ partial:icons/arrow-right class="mr-12 text-white" }}
+            <a href="/" title="Datenschutzerklärung" class="py-4">
+              Datenschutzerklärung
+            </a>
+          </li>
+          <li class="flex">
+            {{ partial:icons/arrow-right class="mr-12 text-white" }}
+            <a href="/" title="Nutzungsbedingungen" class="py-4">
+              Nutzungsbedingungen
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="mt-32 md:col-span-12">
+        <div>&copy; 2022 alphacare. Alle Rechte vorbehalten.</div>
+      </div>
+    </div>
+  </div>
 </footer>
