--- a/resources/views/partials/layout/header.antlers.html
+++ b/resources/views/partials/layout/header.antlers.html
@@ -1,4 +1,9 @@
-<header>
-
+<header class="site-header">
+  <div>
+    <a href="/" title="Homepage anzeigen" class="block w-[94px] lg:w-[136px] h-auto">
+      {{ partial:icons/logo }}
+    </a>
+    {{ partial:menu/main }}
+    {{ partial:menu/button }}
+  </div>
 </header>
-{{ partial:menu/main }}
