--- a/resources/css/layout/menu.css
+++ b/resources/css/layout/menu.css
@@ -1,30 +1,48 @@
 nav.site-menu {
-  @apply bg-red-200 fixed w-full z-50 px-27 pt-27 top-[112px] left-0;
-  height: 1px;
-  opacity: 0;
+  @apply bg-white fixed md:relative top-[112px] md:top-auto left-0 md:left-auto w-full md:w-auto h-1 md:h-auto px-27 pt-27 md:p-0 opacity-0 md:opacity-100 z-50;
   transition: height .36s ease-in-out;
 }
 
 nav.site-menu.is-open {
+  @apply md:!h-auto opacity-100;
   height: calc(100vh - 112px);
-  opacity: 1;
+}
+
+nav.site-menu ul {
+  @apply opacity-0 md:opacity-100 transition-opacity duration-200 delay-200 ease-in-out;
 }
 
 nav.site-menu.is-open ul {
   @apply opacity-100
 }
 
-nav.site-menu ul {
-  @apply opacity-0 transition-opacity duration-200 delay-200 ease-in-out;
+nav.site-menu > ul {
+  @apply md:flex
+}
 
+nav.site-menu > ul > li {
+  @apply md:relative md:ml-34;
+}
+
+nav.site-menu > ul > li:first-child {
+  @apply md:ml-0;
 }
 
 nav.site-menu ul ul {
-  @apply ml-8 mb-5
+  @apply ml-6 mb-6 md:m-0 md:pt-50 md:pb-20 md:px-20 md:absolute md:left-0 md:w-auto md:bg-white
+}
+
+nav.site-menu ul li:last-child ul {
+  @apply md:left-auto md:right-0;
 }
 
 nav.site-menu ul a {
-  @apply text-base font-semibold text-graphite py-4 block;
+  @apply text-base lg:text-lg font-semibold text-graphite py-6 flex items-center;
+}
+
+nav.site-menu ul a:hover,
+nav.site-menu ul a.is-active {
+  @apply text-azure;
 }
 
 nav.site-menu ul ul a {
