--- a/resources/views/partials/menu/main.antlers.html
+++ b/resources/views/partials/menu/main.antlers.html
@@ -19,27 +19,55 @@
 <nav class="site-menu" data-menu>
   <ul>
     <li>
-      <a href="">Patienten</a>
-      <ul>
-        <li><a href="">Betreueung</a></li>
+      <a href="" data-menu-parent-item>
+        Patienten
+        {{ partial:icons/chevron-down class="ml-8" }}
+      </a>
+      <ul class="is-hidden" data-menu-child-item>
+        <li>
+          <a href="">
+            Patientenbetreueung
+            {{ partial:icons/chevron-right class="ml-8 mt-4" }}
+          </a>
+        </li>
+        <li><a href="">Sprechstunde</a></li>
+        <li><a href="">Häufige Fragen</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="" data-menu-parent-item>
+        Dienstleistungen
+        {{ partial:icons/chevron-down class="ml-8" }}
+      </a>
+      <ul class="is-hidden" data-menu-child-item>
+        <li>
+          <a href="">
+            Betreueung
+            {{ partial:icons/chevron-right class="ml-8 mt-4" }}
+          </a>
+        </li>
         <li><a href="">Lorem</a></li>
         <li><a href="">Ipsum</a></li>
       </ul>
     </li>
     <li>
-      <a href="">Kontakt</a>
-      <ul>
-        <li><a href="">Dolor</a></li>
+      <a href="" data-menu-parent-item>
+        Über uns
+        {{ partial:icons/chevron-down class="ml-8" }}
+      </a>
+      <ul class="is-hidden" data-menu-child-item>
         <li><a href="">Lorem</a></li>
+        <li><a href="">Dolor</a></li>
         <li><a href="">Ipsum</a></li>
       </ul>
     </li>
     <li>
-      <a href="">Über uns</a>
-      <ul>
-        <li><a href="">Lorem</a></li>
-        <li><a href="">Dolor</a></li>
-        <li><a href="">Ipsum</a></li>
+      <a href="" data-menu-parent-item>
+        Kontakt
+        {{ partial:icons/chevron-down class="ml-8" }}
+      </a>
+      <ul class="is-hidden" data-menu-child-item>
+        <li><a href="">Standorte</a></li>
       </ul>
     </li>
   </ul>
