--- a/resources/views/partials/menu/main.antlers.html
+++ b/resources/views/partials/menu/main.antlers.html
@@ -1,74 +1,30 @@
-{{# <a 
-  href="javascript:;" 
-  title="Menu anzeigen / verbergen"
-  class=""
-  data-menu-btn>
-  {{ partial:icons/cross :class="'icon-cross'" }}
-  {{ partial:icons/burger :class="'icon-burger'" }}
-</a>
-<div class="menu" data-menu>
-  <nav class="container">
-    <ul class="">
-      {{ nav:collection:pages sort="order" is_menu:is="1" }}
-        {{ partial:menu/item :text="title" :url="url" target="_self" }}
-      {{ /nav:collection:pages }}
-    </ul>
-  </nav>
-</div> #}}
-
 <nav class="site-menu" data-menu>
   <ul>
-    <li>
-      <a href="" data-menu-parent-item>
-        Patienten
-        {{ partial:icons/chevron-down class="ml-8" }}
-      </a>
-      <ul class="is-hidden" data-menu-child-item>
-        <li>
-          <a href="">
-            Patientenbetreueung
-            {{ partial:icons/chevron-right class="ml-8 mt-4" }}
-          </a>
-        </li>
-        <li><a href="">Sprechstunde</a></li>
-        <li><a href="">Häufige Fragen</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="" data-menu-parent-item>
-        Dienstleistungen
-        {{ partial:icons/chevron-down class="ml-8" }}
-      </a>
-      <ul class="is-hidden" data-menu-child-item>
-        <li>
-          <a href="">
-            Betreueung
-            {{ partial:icons/chevron-right class="ml-8 mt-4" }}
-          </a>
-        </li>
-        <li><a href="">Lorem</a></li>
-        <li><a href="">Ipsum</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="" data-menu-parent-item>
-        Über uns
-        {{ partial:icons/chevron-down class="ml-8" }}
-      </a>
-      <ul class="is-hidden" data-menu-child-item>
-        <li><a href="">Lorem</a></li>
-        <li><a href="">Dolor</a></li>
-        <li><a href="">Ipsum</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="" data-menu-parent-item>
-        Kontakt
-        {{ partial:icons/chevron-down class="ml-8" }}
-      </a>
-      <ul class="is-hidden" data-menu-child-item>
-        <li><a href="">Standorte</a></li>
-      </ul>
-    </li>
+    {{ nav:main_nav }}
+      <li>
+        <a 
+          href="{{ url }}" 
+          class="{{ if is_parent }}is-active{{ /if }} {{ if is_current }}is-current{{ /if }}" 
+          {{ if is_external }} target="_blank" {{ /if }}
+          data-menu-parent-item>
+          {{ title }}
+          {{ partial:icons/chevron-down class="ml-8" }}
+        </a>
+        {{ if children }}
+          <ul class="is-hidden md:min-w-[175px]" data-menu-child-item>
+            {{ children }}
+            <li>
+              <a 
+                href="{{if url | starts_with('#') }} {{ parent.url }}{{ url }} {{ else }} {{ url }} {{ /if }}"
+                {{ if is_external }} target="_blank" {{ /if }}>
+                {{ title }}
+                {{ partial:icons/chevron-right class="ml-8 mt-4 md:hidden" }}
+              </a>
+            </li>
+            {{ /children }}
+          </ul>
+        {{ /if }}
+      </li>
+    {{ /nav:main_nav }}
   </ul>
 </nav>
