--- a/resources/views/partials/components/masthead.antlers.html
+++ b/resources/views/partials/components/masthead.antlers.html
@@ -12,7 +12,7 @@
 
 <div class="bg-{{bgcolor}} flex aspect-square sm:aspect-4/1 sm:min-h-[400px] md:min-h-[440px] max-h-[330px] sm:max-h-none xl:max-h-[465px] w-full relative">
   <div class="container flex justify-center items-center">
-    <h1 class="text-2xl sm:text-3xl md:text-4xl font-semi font-semibold text-white text-center leading-tight">
+    <h1 class="text-2xl sm:text-3xl md:text-4xl font-semi font-semibold text-white text-center leading-none">
       {{ title }}
     </h1>
   </div>
