--- a/resources/views/partials/layout/header.antlers.html
+++ b/resources/views/partials/layout/header.antlers.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="site-header" data-header>
   <div>
     <a href="/" title="Homepage anzeigen" class="block w-[94px] lg:w-[136px] h-auto">
       {{ partial:icons/logo }}
