--- a/resources/views/partials/components/image.antlers.html
+++ b/resources/views/partials/components/image.antlers.html
@@ -1,6 +1,6 @@
 <img 
   src="{{ glide :src="image" :width="width ? width : 1200" :height="height ? height : 900" }}" 
-  class="block w-full {{ if (class) }} {{ class }} {{ /if}}" 
+  class="block w-full {{ if class }} {{ class }} {{ /if}}" 
   width="{{ width ? width : 1200 }}" 
   height="{{ height ? height : 900 }}" 
   alt="{{ caption }}"
