--- a/resources/views/partials/components/text_image.antlers.html
+++ b/resources/views/partials/components/text_image.antlers.html
@@ -2,12 +2,12 @@
   <div class="lg:grid lg:grid-cols-2 lg:gap-60 xl:gap-72 {{ class }}">
     {{ if image }}
       <figure class="lg:col-span-1 mb-32 lg:mb-0 {{ if order == 'text-image'}} lg:order-2 {{ /if }}">
-        {{ partial:components/image :image="image" :width="'1200'" :height="'900'" :caption="image:alt" }}
+        {{ partial:components/image :image="image" :width="'1200'" :height="'900'" :caption="image:alt" class="aspect-4/3" }}
       </figure>
     {{ /if }}
     {{ if text }}
       <div class="lg:col-span-1 text-md leading-8 flex flex-col justify-center {{ if order == 'text-image'}} lg:order-1 {{ /if }}">
-        <h2 class="font-semibold text-xl mb-36">{{ title }}</h2>
+        <h2 class="font-semibold text-xl mb-36 lg:text-2xl">{{ title }}</h2>
         {{ text }}
         {{ if link }}
           <div class="mt-32 lg:mt-48">
