--- a/resources/views/templates/content/default.antlers.html
+++ b/resources/views/templates/content/default.antlers.html
@@ -1,3 +1,3 @@
-{{ content }}
-  {{ partial:components/bard }}
-{{ /content }}
+{{ elements }}
+  {{ partial:components/elements }}
+{{ /elements }}
