--- a/resources/views/partials/components/bard.antlers.html
+++ b/resources/views/partials/components/bard.antlers.html
@@ -21,3 +21,7 @@
 {{ if type == 'image' }}
   {{ partial:components/image }}
 {{ /if }}
+
+{{ if type == 'collapsibles' }}
+  {{ partial:components/image }}
+{{ /if }}
