--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,12 +5,15 @@
 @import "typo/webfonts.css";
 
 @import "components/buttons/menu.css";
+@import "components/buttons/primary.css";
 @import "components/collapsible.css";
+@import "components/headings.css";
 
 @import "layout/base.css";
 @import "layout/header.css";
 @import "layout/footer.css";
 @import "layout/menu.css";
+@import "layout/theme.css";
 
 @import "helpers.css";
 
