--- a/resources/views/partials/components/collapsible.antlers.html
+++ b/resources/views/partials/components/collapsible.antlers.html
@@ -1,10 +1,10 @@
-<details class="border-t last-of-type:border-b border-cloud-mist py-10 md:py-20 {{ class }}">
-  <summary class="flex items-start leading-none justify-start cursor-pointer">
-    {{ partial:icons/plus :class="'plus block w-15 h-15 md:w-20 md:h-20 shrink-0 mt-7'" }}
-    {{ partial:icons/minus :class="'minus hidden w-15 h-15 md:w-20 md:h-20 shrink-0 mt-7'" }}
-    <h3 class="select-none text-left font-bold leading-tight ml-15 md:ml-25">{{ title }}</h3>
+<details class="border-t last-of-type:border-b border-cloud-mist {{ class }}">
+  <summary class="flex items-start leading-none justify-between cursor-pointer py-16 lg:py-27 group">
+    <h3 class="select-none text-left font-normal leading-tight group-hover:text-azure transition-all">{{ title }}</h3>
+    {{ partial:icons/chevron-right class="close w-7 shrink-0 mt-7 group-hover:text-azure transition-all" }}
+    {{ partial:icons/chevron-down class="open h-4 shrink-0 mt-7 group-hover:text-azure transition-all" }}
   </summary>
-  <div class="py-10 pl-30 md:pl-45 {{ innerClass }}">
+  <div class="pb-16 xl:pb-27 leading-6 lg:leading-7 text-xs lg:text-sm {{ innerClass }}">
     {{ text }}
   </div>
 </details>
