--- a/resources/views/partials/components/text_image.antlers.html
+++ b/resources/views/partials/components/text_image.antlers.html
@@ -1,6 +1,5 @@
 {{ if full_width }}
-
-  <section class="bg-{{theme}} py-72 xl:py-108 mt-72 xl:mt-108">
+  <section class="theme-{{ background_color }} py-72 xl:py-108 mt-72 xl:mt-108">
     <div class="container lg:grid lg:grid-cols-2 lg:gap-60 xl:gap-72 {{ class }}">
       {{ if image }}
         <figure class="lg:col-span-1 mb-32 lg:mb-0 {{ if order == 'text-image'}} lg:order-2 {{ /if }}">
@@ -9,25 +8,18 @@
       {{ /if }}
       {{ if text }}
         <div class="lg:col-span-1 text-base leading-8 flex flex-col justify-center {{ if order == 'text-image'}} lg:order-1 {{ /if }}">
-          <h3 class="font-semibold text-lg mb-18 lg:text-xl">{{ title }}</h3>
+          <h3 class=" text-lg mb-18 lg:text-xl">{{ title }}</h3>
           {{ text }}
           {{ if link }}
             <div class="mt-32 lg:mt-48">
-              <a 
-                href="{{ link }}" 
-                class="group font-semibold text-xxs lg:text-xs text-white hover:text-graphite bg-graphite hover:bg-transparent border border-graphite transition-all rounded-full inline-flex items-center leading-none w-auto py-14 px-32 lg:py-18 lg:px-42">
-                {{ link_text }}
-                {{ partial:icons/arrow-right class="ml-12 mt-2 text-white group-hover:text-graphite group-hover:translate-x-4 transition-all" }}
-              </a>
+              {{ partial:components/link }}
             </div>
           {{ /if }}
         </div>
       {{ /if }}
     </div>
   </section>
-
 {{ else }}
-  
   <section class="container mt-72 xl:mt-108">
     <div class="lg:grid lg:grid-cols-2 lg:gap-60 xl:gap-72 {{ class }}">
       {{ if image }}
@@ -37,21 +29,15 @@
       {{ /if }}
       {{ if text }}
         <div class="lg:col-span-1 text-md leading-8 flex flex-col justify-center {{ if order == 'text-image'}} lg:order-1 {{ /if }}">
-          <h2 class="font-semibold text-xl mb-36 lg:text-2xl">{{ title }}</h2>
+          <h2 class="text-xl mb-36 lg:text-2xl">{{ title }}</h2>
           {{ text }}
           {{ if link }}
             <div class="mt-32 lg:mt-48">
-              <a 
-                href="{{ link }}" 
-                class="group font-semibold text-xxs lg:text-xs text-white hover:text-graphite bg-azure hover:bg-white border border-azure transition-all rounded-full inline-flex items-center leading-none w-auto py-14 px-32 lg:py-18 lg:px-42">
-                {{ link_text }}
-                {{ partial:icons/arrow-right class="ml-12 mt-2 text-white group-hover:text-graphite group-hover:translate-x-4 transition-all" }}
-              </a>
+              {{ partial:components/link }}
             </div>
           {{ /if }}
         </div>
       {{ /if }}
     </div>
   </section>
-
 {{ /if }}
