--- a/resources/views/partials/components/banner.antlers.html
+++ b/resources/views/partials/components/banner.antlers.html
@@ -1,9 +1,16 @@
 <section class="theme-{{ background_color }} {{ if background_color != 'light-gray'}} text-white {{ /if }} py-72 xl:py-108">
   <div class="container flex flex-col justify-center items-center md:text-center">
-    <h2 class="text-xl lg:text-2xl leading-tight {{ if text }} mb-36 {{ /if }}">{{ title }}</h2>
+    <h2 class="text-xl lg:text-2xl leading-tight max-w-3xl {{ if text }} mb-36 {{ /if }}">
+      {{ title }}
+    </h2>
     {{ if text }}
       <div class="text-md leading-8">
         {{ text | nl2br }}
+      </div>
+    {{ /if }}
+    {{ if link }}
+      <div class="mt-36 xl:mt-48">
+        {{ partial:components/link }}
       </div>
     {{ /if }}
   </div>
