--- a/resources/views/partials/components/bard.antlers.html
+++ b/resources/views/partials/components/bard.antlers.html
@@ -1,27 +1,28 @@
-{{ if type == 'text' }}
-  {{ text }}
-{{ /if }}
+<section class="{{ if background_color }} theme-{{ background_color }} {{ /if }} py-72 xl:py-108">
+  <div class="container">
+    <article>
+      {{ text }}
+        <div class="text-md leading-8">
+          {{ text }}
+        </div>
 
-{{ if type == 'collapsible' }}
-  {{ partial:components/collapsible }}
-{{ /if }}
+        {{ if type == 'collapsibles' }}
+          <div class="mt-36 xl:mt-72">
+            {{ if title }}
+              <h3 class="text-lg mb-32">{{ title }}</h3>
+            {{ /if }}
+            {{ collapsible }}
+              {{ partial:components/collapsible }}
+            {{ /collapsible }}
+          </div>
+        {{ /if }}
 
-{{ if type == 'masthead' }}
-  {{ partial:components/masthead }}
-{{ /if }}
+        {{ if type == 'text_image' }}
+          {{ partial:components/text_image }}
+        {{ /if }}
 
-{{ if type == 'banner' }}
-  {{ partial:components/banner }}
-{{ /if }}
+      {{ /text }}
 
-{{ if type == 'text_image' }}
-  {{ partial:components/text_image }}
-{{ /if }}
-
-{{ if type == 'image' }}
-  {{ partial:components/image }}
-{{ /if }}
-
-{{ if type == 'collapsibles' }}
-  {{ partial:components/image }}
-{{ /if }}
+    </article>
+  </div>
+</section>
